package com.alex.kotlin.javadesignmode.bridge

/**
 * @author Alex
 * @date 2019/4/10 下午4:15
 * @email 18238818283@sina.cn
 * @desc ...
 */
interface Implementer {
    fun action(msg: String)
    fun print(msg: String)
}